--- a/server/package.json
+++ b/server/package.json
@@ -5,12 +5,14 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
+    "dummy": "node createdummy.js",
     "start": "node src/app.js",
     "dev": "nodemon app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "chance": "^1.1.11",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
